Fix broken styles on firfox
:(has) was not supported so it was removed, no change as it wasnt used anyways

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -338,12 +338,10 @@ svg {
   }
 }
 
-button:has(svg),
 button.primary,
 button.secondary,
 button.outline,
 button.contrast,
-.button-like:has(svg),
 .button-like.primary,
 .button-like.secondary,
 .button-like.outline,
